# simple-landing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pre-commit.yaml  pyproject.toml  requirements.txt
docker/: compose-base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml
env_files/: .env  .env.dev
scripts/: run-server.sh  start.sh
src/: main.py  schemas.py
src/api/mail/: dependencies.py  interactor.py  router.py  shemas.py  use_cases.py
src/core/: exception_handlers.py  logger.py  logging.yaml  settings.py
static/: Dockerfile  index.html  script.js  style.css
